[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/zombie.gd" type="Script" id=1]
[ext_resource path="res://art/characters/Zombie.png" type="Texture" id=2]
[ext_resource path="res://Scripts/zombie_hitbox.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 224, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 46.0109

[sub_resource type="CapsuleShape2D" id=44]
radius = 8.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=43]
radius = 9.0
height = 10.0

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.109804, 0.854902, 0.0862745, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="zombie" type="KinematicBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "Idle"
offset = Vector2( 0, -3 )

[node name="Detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 44 )

[node name="zombie_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="zombie_hitbox"]
shape = SubResource( 43 )

[node name="deathTimer" type="Timer" parent="."]

[node name="takeDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="zombieHealth" type="ProgressBar" parent="."]
margin_left = -6.0
margin_top = 6.0
margin_right = 114.0
margin_bottom = 36.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 20 )
max_value = 150.0
percent_visible = false

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="area_entered" from="zombie_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="area_exited" from="zombie_hitbox" to="." method="_on_enemy_hitbox_area_exited"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="takeDamageTimer" to="." method="_on_takeDamageTimer_timeout"]
